--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Navbar brand -->
       <a class="navbar-brand mt-2 mt-lg-0" href="#">
         <img
-          src="image/APLogo-20-20.png"
+          src="image/aplogo-20-20.png"
           height="100px"
           alt="APLogo"
           loading="lazy"
@@ -121,7 +121,7 @@
          <p>Estudiante de Desarrollo Web Full Stack Junior busco oportunidad para adquirir experiencia en el desarrollo de sitios web enfocado en el Frond End y UI/UX, rama que me intereso mucho al realizar el curso de gestión de ecommerce, donde como proyecto teníamos que realizar un sitio web y me puse a la tarea de investigar todo lo que implica el diseño y la experiencia de usuario para que este sea accesible y navegable. .</p>
        </div>
        <div class="flex-shrink-0">
-         <img src="image/WhatsApp Image 2020-08-31 at 13.18.52.jpeg" width="100px"  height="120px" class="rounded-circle"  alt="Sample Image">
+         <img src="image/whatsapp image 2020-08-31 at 13.18.52.jpeg" width="100px"  height="120px" class="rounded-circle"  alt="Sample Image">
        </div> 
    
       </div>
@@ -164,7 +164,7 @@
                 <div class="row">
                   <div class="col-sm">
                     <div class="card mb-5 text-center">
-                      <img src="image/Captura de pantalla (124).png" height="200px" class="card-img-top" alt="...">
+                      <img src="image/captura de pantalla (124).png" height="200px" class="card-img-top" alt="...">
                       <div class="card-body flex-fill">
                         <h5 class="card-title">Juego de Ahorcado</h5>
                         <p class="card-text">Este es un proyecto de  juego del ahorcado realizado con html,css y javascript.Podes encontrarlo en mi repositorio GitHub. </p>
@@ -189,7 +189,7 @@
            
                   <div class="col-sm">
                     <div class="card mb-5 ">
-                      <img src="image/Captura de pantalla (135).png" height="220px" class="card-img-top" alt="...">
+                      <img src="image/captura de pantalla (135).png" height="220px" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">www.completalookstore.com.ar </h5>
                         <p class="card-text">Pagina Web Ecommerce realizado con WordPress,WooCommerce.</p> 
